# governance-program-library

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  run-release.sh  tsconfig.json
.cargo/: audit.toml
programs/bonk-plugin/: Cargo.toml
programs/bonk-plugin/idls/: spl_token_staking.json
programs/bonk-plugin/src/: error.rs  lib.rs
programs/bonk-plugin/src/instructions/: create_registrar.rs  create_voter_weight_record.rs  mod.rs  update_voter_weight_record.rs
programs/bonk-plugin/src/state/: mod.rs  registrar.rs  stake_deposit_record.rs  voter_weight_record.rs
programs/bonk-plugin/src/utils/: anchor.rs  mod.rs  stake_deposit_receipt.rs  stake_pool.rs
programs/bonk-plugin/tests/: create_registrar.rs  create_voter_weight_record.rs  update_voter_weight_record.rs
programs/bonk-plugin/tests/program_test/: bonk_plugin_test.rs  governance_test.rs  mod.rs  program_test_bench.rs  realm_voter_test.rs  spl_token_staking_test.rs  tools.rs
programs/core-voter/: Cargo.toml
programs/core-voter/src/: error.rs  lib.rs
programs/core-voter/src/instructions/: cast_nft_vote.rs  configure_collection.rs  create_max_voter_weight_record.rs  mod.rs  relinquish_nft_vote.rs  udpate_max_voter_weight_record.rs  update_voter_weight_record.rs
programs/core-voter/src/state/: collection_config.rs  mod.rs  nft_vote_record.rs  registrar.rs
programs/core-voter/src/tools/: mod.rs
programs/core-voter/tests/: cast_nft_vote.rs  configure_collection.rs  create_max_voter_weight_record.rs  create_registrar.rs  create_voter_weight_record.rs  relinquish_nft_vote.rs  update_max_voter_weight_record.rs  update_voter_weight_record.rs
programs/core-voter/tests/program_test/: core_test.rs  core_voter_test.rs  mod.rs  nft_voter_test.rs  program_test_bench.rs  tools.rs
programs/gateway/: Anchor.toml  Cargo.toml
programs/gateway/src/: error.rs  lib.rs
programs/gateway/src/instructions/: cast_vote.rs  configure_registrar.rs  create_max_voter_weight_record.rs  create_registrar.rs  mod.rs  update_registrar.rs  update_voter_weight_record.rs
programs/gateway/src/state/: generic_voter_weight.rs  idl_types.rs  mod.rs  registrar.rs  token_owner_record.rs  voter_weight_record.rs
programs/gateway/src/tools/: anchor.rs  governance.rs  mod.rs
programs/gateway/tests/: cast_vote.rs  configure_registrar.rs  create_max_voter_weight_record.rs  create_registrar.rs  create_voter_weight_record.rs  update_registrar.rs  update_voter_weight_record.rs  update_voter_weight_record_predecessor_plugin.rs  update_voter_weight_record_token_deposit.rs
programs/gateway/tests/program_test/: dummy_voter_test.rs  gateway_voter_test.rs  governance_test.rs  mod.rs  predecessor_plugin_test.rs  program_test_bench.rs  tools.rs
programs/nft-voter/: Anchor.toml  Cargo.toml
programs/nft-voter/src/: error.rs  governance.rs  lib.rs
programs/nft-voter/src/instructions/: cast_nft_vote.rs  configure_collection.rs  count_voter_weight.rs  create_governance_token_holding_account.rs  create_max_voter_weight_record.rs  create_registrar.rs  create_voter_weight_record.rs  deposit_governance_tokens.rs  mod.rs  relinquish_nft_vote.rs  relinquish_vote.rs  update_voter_weight_record.rs  vote_with_nft.rs  withdraw_governance_tokens.rs
programs/nft-voter/src/state/: collection.rs  collection_config.rs  delegator_token_owner_record.rs  idl_types.rs  max_voter_weight_record.rs  mod.rs  nft_vote_record.rs  nft_voter_token_owner_record.rs  proposal_nft_vote.rs  proposal_nft_vote_record.rs  registrar.rs  voter_weight_counter.rs  voter_weight_record.rs
programs/nft-voter/src/tools/: anchor.rs  governance.rs  mod.rs  spl_token.rs  token_metadata.rs
programs/nft-voter/tests/: cast_nft_vote.rs  configure_collection.rs  count_voter_weight.rs  create_governance_token_holding_account.rs  create_max_voter_weight_record.rs  create_registrar.rs  create_voter_weight_record.rs  deposit_governance_tokens.rs  relinquish_nft_vote.rs  relinquish_vote.rs  update_voter_weight_record.rs  vote_with_nft.rs  withdraw_governance_tokens.rs
programs/nft-voter/tests/program_test/: governance_test.rs  governance_test_bench.rs  mod.rs  nft_voter_test.rs  nft_voter_test_bench.rs  program_test_bench.rs  token_metadata_test.rs  token_metadata_test_bench.rs  tools.rs
programs/realm-voter/: Anchor.toml  Cargo.toml
programs/realm-voter/src/: error.rs  lib.rs
programs/realm-voter/src/instructions/: configure_governance_program.rs  configure_max_voter_weight.rs  configure_squad.rs  configure_voter_weights.rs  create_max_voter_weight_record.rs  create_registrar.rs  create_voter_weight_record.rs  mod.rs  update_max_voter_weight_record.rs  update_voter_weight_record.rs
programs/realm-voter/tests/: configure_governance_program.rs  configure_max_voter_weight.rs  configure_squad.rs  configure_voter_weights.rs  create_max_voter_weight_record.rs  create_registrar.rs  create_voter_weight_record.rs  update_max_voter_weight_record.rs  update_voter_weight_record.rs
programs/shared/: Cargo.toml
programs/shared/src/: compose.rs  error.rs  generic_max_voter_weight.rs  generic_voter_weight.rs  lib.rs  mint.rs  token_owner_record.rs
programs/signatory-no-transfers/: Anchor.toml  Cargo.toml
programs/signatory-no-transfers/src/: error.rs  lib.rs  state.rs
programs/signatory-no-transfers/tests/: test_check_transaction.rs  test_sign.rs
programs/token-haver/: Cargo.toml  readme.md
programs/token-haver/.tests/: configure_mints.rs  create_registrar.rs  create_voter_weight_record.rs  update_voter_weight_record.rs
programs/token-haver/src/: error.rs  lib.rs
programs/token-haver/tests/: configure_governance_program.rs  configure_mints.rs  configure_voter_weights.rs  create_max_voter_weight_record.rs  create_registrar.rs  update_voter_weight_record.rs
programs/token-voter/: Cargo.toml
programs/token-voter/src/: error.rs  governance.rs  lib.rs
programs/token-voter/tests/: cast_token_vote.rs  close_voter.rs  configure_voter_weights.rs  create_max_voter_weight_record.rs  create_registrar.rs  deposit.rs  resize_registrar.rs  withdraw.rs
(+177 files in other folders)
