[package]
name = "gpl-core-voter"
version = "0.2.2"
description = "SPL Governance addin implementing Metaplex Core NFT Asset based governance"
license = "Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "gpl_core_voter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
arrayref = "0.3.6"
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token"] }
itertools = "0.10.2"
mpl-token-metadata = "^4.1.2"
mpl-core = {version = "0.7.1", features = ["anchor"]}
solana-program = "1.18.18"
spl-governance = { version = "4.0", features = ["no-entrypoint"] }
spl-governance-tools =  "0.1.4"
spl-token = { version = "4.0", features = [ "no-entrypoint" ] }

[dev-dependencies]
borsh = "0.10.3"
solana-sdk = "1.18.18"
solana-program-test = "1.18.18"