[package]
name = "gpl-civic-gateway"
version = "0.1.1"
description = "SPL Governance addin for Civic Pass (www.civic.com)"
license = "Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "gpl_civic_gateway"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
arrayref = "0.3.6"
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
anchor-spl = "0.26.0"
enum_dispatch = "0.3.8"
itertools = "0.10.2"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
solana-gateway = "0.2.2"
solana-program = "1.14.16"
spl-governance = { version = "3.1.1", features = ["no-entrypoint"] }
spl-governance-tools=  "0.1.3"
spl-governance-addin-api = "0.1.3"
spl-token = { version = "3.3", features = [ "no-entrypoint" ] }

[dev-dependencies]
borsh = "0.9.1"
solana-sdk = "1.14.16"
solana-program-test = "1.14.16"
spl-governance-addin-mock = "0.1.3"