[package]
name = "gpl-civic-gateway"
version = "0.1.1"
description = "SPL Governance addin for Civic Pass (www.civic.com)"
license = "Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "gpl_civic_gateway"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
arrayref = "0.3.6"
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
enum_dispatch = "0.3.8"
itertools = "0.12.0"
num = "0.4"
num-derive = "0.4.1"
num-traits = "0.2"
solana-gateway = { version = "0.4.0", features = ["no-entrypoint"] }
solana-program = "1.17.12"
spl-governance = { git = "https://github.com/solana-labs/solana-program-library.git", features = ["no-entrypoint"] }
spl-governance-tools=  { git = "https://github.com/solana-labs/solana-program-library.git" }
spl-governance-addin-api = { git = "https://github.com/solana-labs/solana-program-library.git" }
spl-token = { version = "4.0.0", features = [ "no-entrypoint" ] }

[dev-dependencies]
borsh = "0.10.3"
solana-sdk = "1.17.12"
# Due to compatibility issues between solana-program-test 1.17.* and anchor 0.29.0, we need to use a fork of solana-program-test
# https://github.com/coral-xyz/anchor/pull/2711
solana-program-test = { git = "https://github.com/dankelleher/solana.git", branch = "program-test-hack" }
#solana-program-test = "1.17.12"
spl-governance-addin-mock = { git = "https://github.com/solana-labs/solana-program-library.git" }