[package]
name = "gpl-nft-voter"
version = "0.1.1"
description = "SPL Governance addin implementing NFT based governance"
license = "Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "gpl_nft_voter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
arrayref = "0.3.6"
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
anchor-spl = "0.26.0"
itertools = "0.10.2"
mpl-token-metadata = { version = "1.1.0", features = ["no-entrypoint"] }
solana-program = "1.14.10"
spl-governance = { version = "2.2.2", features = ["no-entrypoint"] }
spl-governance-tools=  "0.1.2"
spl-token = { version = "3.3", features = [ "no-entrypoint" ] }

[dev-dependencies]
borsh = "0.9.1"
solana-sdk = "1.14.10"
solana-program-test = "1.14.10"