[package]
name = "gpl-nft-voter"
version = "0.2.2"
description = "SPL Governance addin implementing NFT based governance"
license = "Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "gpl_nft_voter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
arrayref = "0.3.6"
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.26.0", features = ["token"] }
itertools = "0.10.2"
mpl-token-metadata = { version = "1.12.0", features = ["no-entrypoint"] }
solana-program = "1.14.16"
spl-governance = { version = "3.1.1", features = ["no-entrypoint"] }
spl-governance-tools=  "0.1.3"
spl-token = { version = "3.5", features = [ "no-entrypoint" ] }

# The explicit versions are required to compile Anchor <= 0.27.0
# Once upgraded to the higher version this can be removed
winnow = "=0.4.1"
toml_datetime = "=0.6.1"

[dev-dependencies]
borsh = "0.9.1"
solana-sdk = "1.14.16"
solana-program-test = "1.14.16"