[package]
name = "gpl-nft-voter"
version = "0.2.2"
description = "SPL Governance addin implementing NFT based governance"
license = "Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "gpl_nft_voter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
arrayref = "0.3.6"
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["token"] }
itertools = "0.12.0"
mpl-token-metadata = "3.2.3"
solana-program = "1.17.12"
spl-governance = { git = "https://github.com/solana-labs/solana-program-library.git", features = ["no-entrypoint"] }
spl-governance-tools=  { git = "https://github.com/solana-labs/solana-program-library.git" }
spl-token = { version = "4.0.0", features = [ "no-entrypoint" ] }

[dev-dependencies]
borsh = "0.10.3"
solana-sdk = "1.17.12"
solana-program-test = { git = "https://github.com/dankelleher/solana.git", branch = "program-test-hack" }
#solana-program-test = "1.17.9"
