[package]
name = "gpl-token-haver"
version = "0.0.1"
description = "SPL Governance plugin granting governance power based on the nonzero presence of locked tokens"
license = "Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "gpl_token_haver"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
arrayref = "0.3.6"
anchor-lang = { version = "0.26.0" }
anchor-spl = "0.26.0"
solana-program = "1.14.16"
spl-governance = { version = "3.1.1", features = ["no-entrypoint"] }
spl-governance-tools=  "0.1.3"
spl-token = { version = "3.3", features = [ "no-entrypoint" ] }

[dev-dependencies]
borsh = "0.9.1"
solana-sdk = "1.14.16"
solana-program-test = "1.14.16"